--- a/index.html
+++ b/index.html
@@ -305,6 +305,7 @@
         <header>
             <h1>🎬 Gerry's Movies and TV Show Tracker</h1>
             <p>Track movies you want to watch and get personalized recommendations</p>
+            <div style="font-size: 0.75em; color: rgba(255,255,255,0.5); margin-top: 5px;">v2.0.0 - Firebase Auto-Save</div>
         </header>
 
         <div class="controls">
